# deepvoice

./: pyproject.toml
src/deepvoice/: __init__.py  __main__.py  client.py  server.py
src/deepvoice.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
