[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deepvoice"
version = "0.1.1"
dependencies = [
]

[project.scripts]
deepvoice = "deepvoice.__main__:main"
deepvoice_server = "deepvoice.server:main"

[tool.setuptools.packages.find]
where = ["src"]
